tests/backend/checkmach/fail1.output
File "fail1.ml", line 3, characters 5-15:
Error: Annotation check for zero_alloc strict failed on function Fail1.test15 (camlFail1__test15_HIDE_STAMP)
File "fail1.ml", line 3, characters 64-74:
  direct call camlFail1__test14_HIDE_STAMP
